# src/modules/video/video.controller.ts
@@ -1,0 +1,26 @@
+import { Controller, Get, Post, Body, Param, Delete } from '@nestjs/common';
+import { VideoService } from './video.service';
+import { CreateVideoDto } from './dto/create-video.dto';
+import { ApiBearerAuth } from '@nestjs/swagger';
+import { Public } from 'src/common/decorators/public.decorator';
+
+@Controller('video')
+@ApiBearerAuth()
+export class VideoController {
+  constructor(private readonly videoService: VideoService) {}
+
+  @Post()
+  create(@Body() createVideoDto: CreateVideoDto) {
+    return this.videoService.create(createVideoDto);
+  }
+  @Public()
+  @Get()
+  findAll() {
+    return this.videoService.findAll();
+  }
+
+  @Delete(':id')
+  remove(@Param('id') id: string) {
+    return this.videoService.remove(id);
+  }
+}
